syntax = "proto3";

package ai_assistant;

// Specify the Go package where the generated code should reside.
// Adjust the path according to your module path and desired package structure.
option go_package = "ai_assistant_service/;ai_assistant_service";

service AiAssistantService {
  rpc Comment(CommentRequest) returns (CommentResponse);
  rpc Link(LinkRequest) returns (LinkResponse);
}

message CommentRequest {
  string sourceUnit = 1;
  string code = 2;
}

message CommentResponse {
  string result = 1;
}

message LinkRequest {
  string sourceUnit = 1;
  string code = 2;
}

message LinkResponse {
  string result = 1;
}
